Incorrect preferred width computation when trimmable leading whitespace is present https://bugs.webkit.org/show_bug.cgi?id=231139

Reviewed by Antti Koivisto.

Source/WebCore:

stripFrontSpaces should be reset to the default value whenever we are at the beginning of the line, while computing the preferred trimmed width.
This is already done for line break boxes (<br>) but not when the force line break comes from a text content with
preserved linebreak ("\n").

See WPT progressions.

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeInlinePreferredLogicalWidths const):
* rendering/RenderText.cpp:
(WebCore::RenderText::trimmedPreferredWidths):
* rendering/RenderText.h:

LayoutTests:

* TestExpectations: IFC already supports these cases. Preferred width computation produced an incorrect shrink-fit width.


Canonical link: https://commits.webkit.org/242454@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283481 268f45cc-cd09-0410-ab3c-d52691b4dbfc